@@ -1,3 +1,8 @@
+SimpleComplex/Config 1.x, 2017-08-24
+------------------------------------
+- CLI commands must respect new command 'silent' property.
+- CLI 'get' command default to print instead default to return the value.
+
 SimpleComplex/Config 1.x, 2017-08-23
 ------------------------------------
 - Important: ini based configuration must use (look for)
